service.yml
apiVersion: v1
kind: Service
metadata:
  name: testservice
spec:
  ports:
    - port: 80
      targetPort: 8301
  selector:
    app: testapp
  type: ClusterIP
