ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    enable-vts-status: "true"
    prometheus.io/scrape: "true"
    prometheus.io/port: "9091"
spec:
  rules:
    - host: localkube.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: testservice
                port:
                  number: 80
